# minesweeper-api

./: .flake8  Makefile  Procfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pipeline.yml
diagrams/: minesweeper-game.drawio
minesweeper_api/: api.py  main.py
minesweeper_api/adapters/: healthcheck_api.py  main_api.py
minesweeper_api/adapters/repositories/: memory_minesweeper_game_repository.py
minesweeper_api/adapters/rest/: error_validations.py  minesweeper_game_api.py  minesweeper_game_request.py  minesweeper_game_response.py  rest_minesweeper_game_handler.py
minesweeper_api/domain/aggregates/: minesweeper_game.py  minesweeper_game_type.py
minesweeper_api/domain/aggregators/: minesweeper_game_type.py
minesweeper_api/domain/entities/: minesweeper_board_box.py  minesweeper_game.py  minesweeper_game_board.py
minesweeper_api/domain/services/: minesweeper_game_service.py
minesweeper_api/domain/value_objects/: board_box_position.py  board_box_status.py  game_difficulty.py  game_status.py
minesweeper_api/domain_ports/: minesweeper_game_handler.py  minesweeper_game_repository.py
tests/: test_api.py  test_healthcheck_api.py  test_minesweeper_api.py
tests/integrations/: test_minesweeper_game_api.py
tests/unit/adapters/: test_minesweeper_game_request.py  test_rest_minesweeper_game_hanlder.py
tests/unit/domain/aggregates/: test_minesweeper_game.py
tests/unit/domain/entities/: test_minesweeper_board_box.py  test_minesweeper_game.py  test_minesweeper_game_board.py
tests/unit/domain/services/: test_minesweeper_game_service.py
