[tool.poetry]
name = "minesweeper-api"
version = "0.1.0"
description = ""
authors = ["Miguel Hernández <mhernand@thougtworks.com>", "Yusdanis Feus <yusdanis.feus@thougtworks.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
dataclass-type-validator = "^0.0.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.25.1"
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "minesweeper_api.main:run_api"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'